--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "release": "npm run build && npm version patch && npm publish"
   },
   "author": "Ridestore",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@managed-components/types": "^1.0.4",
     "@types/jest": "^29.4.0",
